--- a/mPayTradeCore-service/src/main/resources/config/jdbc.properties
+++ b/mPayTradeCore-service/src/main/resources/config/jdbc.properties
@@ -1,22 +1,22 @@
-driver=${jdbc_driver}
-url=${jdbc_url}
-username=${jdbc_username}
-password=${jdbc_password}
+driver=com.mysql.jdbc.Driver
+url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=PRC&useSSL=false
+username=root
+password=123456
 #定义初始连接数
-initialSize=${jdbc_initialSize}
+initialSize=20
 #定义最大连接数
-maxActive=${jdbc_maxActive}
+maxActive=40
 #定义最大空闲
-maxIdle=${jdbc_maxIdle}
+maxIdle=20
 #定义最小空闲
-minIdle=${jdbc_minIdle}
+minIdle=1
 #定义最长等待时间
-maxWait=${jdbc_maxWait}
+maxWait=60000
 #timeBetweenEvictionRunsMillis毫秒秒检查一次连接池中空闲的连接,把空闲时间超过minEvictableIdleTimeMillis毫秒的连接断开,直到连接池中的连接数到minIdle为止
-timeBetweenEvictionRunsMillis=${jdbc_timeBetweenEvictionRunsMillis}
+timeBetweenEvictionRunsMillis=3000
 #
-minEvictableIdleTimeMillis=${jdbc_minEvictableIdleTimeMillis}
+minEvictableIdleTimeMillis=300000
 #Statement缓存大小
-maxPoolPreparedStatementPerConnectionSize=${jdbc_maxPoolPreparedStatementPerConnectionSize}
+maxPoolPreparedStatementPerConnectionSize=20
 #
-druid.filters=${jdbc_druid_filters}
+druid.filters=stat
