增加sftp工具类，完成文件上传与下载

--- a/mPayTradeCore-common/pom.xml
+++ b/mPayTradeCore-common/pom.xml
@@ -58,6 +58,11 @@
 			<artifactId>commons-net</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.jcraft</groupId>
+			<artifactId>jsch</artifactId>
+		</dependency>
+
 		<!-- 日志 -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
