--- a/mPayTradeCore-service/pom.xml
+++ b/mPayTradeCore-service/pom.xml
@@ -17,13 +17,6 @@
 	<url>http://maven.apache.org</url>
 
 	<dependencies>
-		<!-- mPayTradeCore相关jar包 -->
-		<dependency>
-			<groupId>com.fesc.mPayTradeCore</groupId>
-			<artifactId>mPayTradeCore-dao</artifactId>
-		</dependency>
-		<!-- mPayTradeCore end -->
-
 		<!-- spring核心 -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -118,6 +111,36 @@
 		<!-- pagehelper end -->
 
 		<!-- tools -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>dom4j</groupId>
+			<artifactId>dom4j</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-net</groupId>
+			<artifactId>commons-net</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>com.jcraft</groupId>
 			<artifactId>jsch</artifactId>
