--- a/mPayTradeCore-web/pom.xml
+++ b/mPayTradeCore-web/pom.xml
@@ -108,8 +108,8 @@
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.1</version>
 				<configuration>
-					<path>/mPayTradeCore-web</path>
-					<port>8081</port>
+					<path>/mPay</path>
+					<port>8080</port>
 				</configuration>
 			</plugin>
 		</plugins>
