--- a/mPayTradeCore-service/src/main/resources/config/jdbc.properties
+++ b/mPayTradeCore-service/src/main/resources/config/jdbc.properties
@@ -1,7 +1,7 @@
-driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=PRC&useSSL=false
-username=root
-password=huhui
+driver=oracle.jdbc.driver.OracleDriver
+url=jdbc:oracle:thin:@168.33.130.250:1521:mpay
+username=mpay
+password=mpay
 #定义初始连接数
 initialSize=20
 #定义最大连接数
