--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,12 @@
 				<artifactId>jsch</artifactId>
 				<version>0.1.53</version>
 			</dependency>
+
+			<dependency>
+				<groupId>com.alibaba</groupId>
+				<artifactId>fastjson</artifactId>
+				<version>1.2.7</version>
+			</dependency>
 			<!-- tools end -->
 
 			<!-- alipay trade sdk -->
