--- a/mPayTradeCore-service/pom.xml
+++ b/mPayTradeCore-service/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>mPayTradeCore-service</artifactId>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<parent>
 		<groupId>com.fesc.mPayTradeCore</groupId>
@@ -159,6 +159,13 @@
 		</dependency>
 		<!-- sdk end -->
 
+		<!-- 导入JavaEE jar -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
 		<!-- junit -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -195,6 +202,17 @@
 							</goals>
 						</execution>
 					</executions>
+				</plugin>
+
+				<!-- 配置tomcat -->
+				<plugin>
+					<groupId>org.apache.tomcat.maven</groupId>
+					<artifactId>tomcat7-maven-plugin</artifactId>
+					<version>2.1</version>
+					<configuration>
+						<path>/mPay</path>
+						<port>8088</port>
+					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
