--- a/mPayTradeCore-service/src/main/resources/config/zfbinfo.properties
+++ b/mPayTradeCore-service/src/main/resources/config/zfbinfo.properties
@@ -2,7 +2,7 @@
 # 支付宝网关名、partnerId和appId
 open_api_domain = https://openapi.alipay.com/gateway.do
 mcloud_api_domain = http://mcloudmonitor.com/gateway.do
-pid = 2088811361230225
+pid = 
 appid = 2016070101572274
 
 # RSA私钥、公钥和支付宝公钥
