--- a/mPayTradeCore-service/src/main/resources/log4j.properties
+++ b/mPayTradeCore-service/src/main/resources/log4j.properties
@@ -8,8 +8,7 @@ log4j.appender.Console.layout = org.apache.log4j.PatternLayout
 log4j.appender.Console.layout.ConversionPattern=[%p] [%d{yyyy-MM-dd HH\:mm\:ss SSS}][%c]%m%n
 #定义在Console中日志输出级别DEBUG及以上
 log4j.appender.Console.Threshold=INFO
-  
-#文件大小到达指定尺寸的时候产生一个新的文件  
+
 log4j.appender.ErrorFile=org.apache.log4j.DailyRollingFileAppender
 #指定输出目录  
 log4j.appender.ErrorFile.File=logs/mPayTradeCore-service-error-only.log
@@ -22,10 +21,10 @@ log4j.appender.ErrorFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.ErrorFile.layout.ConversionPattern=[%p] [%d{yyyy-MM-dd HH\:mm\:ss SSS}][%c]%m%n
 #设置编码
 log4j.appender.ErrorFile.Encoding=UTF-8
-
-#文件大小到达指定尺寸的时候产生一个新的文件  
+ 
 log4j.appender.CommonFile=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.CommonFile.DatePattern='.'yyyy-MM-dd'.log'
+#每小时生成一个日志文件
+log4j.appender.CommonFile.DatePattern='.'yyyy-MM-dd_HH'.log'
 #指定输出目录  
 log4j.appender.CommonFile.File=logs/mPayTradeCore-service-info.log
 #定义在ErrorFile中日志输出级别
