--- a/mPayTradeCore-service/pom.xml
+++ b/mPayTradeCore-service/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>com.fesc.mPayTradeCore</groupId>
 		<artifactId>mPayTradeCore</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>20160715</version>
 	</parent>
 
 	<name>mPayTradeCore-service</name>
