增加扫码支付模拟器页面

--- a/mPayTradeCore-service/pom.xml
+++ b/mPayTradeCore-service/pom.xml
@@ -150,6 +150,11 @@
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+		</dependency>
 		<!-- tools end -->
 
 		<!-- alipay trade sdk -->
