--- a/pom.xml
+++ b/pom.xml
@@ -190,6 +190,12 @@
 				<artifactId>fastjson</artifactId>
 				<version>1.2.7</version>
 			</dependency>
+
+			<dependency>
+				<groupId>javax.servlet</groupId>
+				<artifactId>jstl</artifactId>
+				<version>1.2</version>
+			</dependency>
 			<!-- tools end -->
 
 			<!-- alipay trade sdk -->
