修改引入jar包版本

--- a/mPayTradeCore-service/pom.xml
+++ b/mPayTradeCore-service/pom.xml
@@ -155,6 +155,11 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+		</dependency>
 		<!-- tools end -->
 
 		<!-- alipay trade sdk -->
