--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,12 @@
 				<artifactId>jstl</artifactId>
 				<version>1.2</version>
 			</dependency>
+
+			<dependency>
+				<groupId>commons-codec</groupId>
+				<artifactId>commons-codec</artifactId>
+				<version>1.9</version>
+			</dependency>
 			<!-- tools end -->
 
 			<!-- alipay trade sdk -->
