调整订单表，增加支付场景字段

--- a/mPayTradeCore-service/src/main/resources/log4j.properties
+++ b/mPayTradeCore-service/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 #定义LOG输出级别  
-log4j.rootLogger=DEBUG,Console,ErrorFile,CommonFile,DB
+log4j.rootLogger=DEBUG,Console,ErrorFile,CommonFile,JDBC
 #定义日志输出目的地为控制台  
 log4j.appender.Console=org.apache.log4j.ConsoleAppender  
 log4j.appender.Console.Target=System.out  
@@ -34,21 +34,7 @@ log4j.appender.CommonFile.layout.ConversionPattern=[%p] [%d{yyyy-MM-dd HH\:mm\:s
 #设置编码
 log4j.appender.CommonFile.Encoding=UTF-8
 
-#配置异常日志插入数据库
-Log4j.appender.DB=org.apache.Log4j.jdbc.JDBCAppender
-# Set JDBC URL
-Log4j.appender.DB.URL=jdbc:oracle:thin:@168.33.130.250:1521:mpay
-# Set Database Driver
-Log4j.appender.DB.driver=oracle.jdbc.driver.OracleDriver
-# Set database user name and password
-Log4j.appender.DB.user=mpay
-Log4j.appender.DB.password=mpay
-# Set the SQL statement to be executed.
-Log4j.appender.DB.sql=insert into BIZ_EXCEPTION_LOG (CLASS,METHOD,CREATE_TIME,LOG_LEVEL,CONTENT) values ('%C','%M','%d{yyyy-MM-dd HH:mm:ss}','%p','%m')
-# Define the layout for file appender
-Log4j.appender.DB.layout=org.apache.Log4j.PatternLayout
-log4j.appender.DB.Threshold=INFO
-log4j.appender.DB.BufferSize=1
+
 
 
 
