--- a/mPayTradeCore-service/src/main/resources/log4j.properties
+++ b/mPayTradeCore-service/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 #定义LOG输出级别  
-log4j.rootLogger=DEBUG,Console,ErrorFile,CommonFile,JDBC
+log4j.rootLogger=DEBUG,Console,ErrorFile,CommonFile,DB
 #定义日志输出目的地为控制台  
 log4j.appender.Console=org.apache.log4j.ConsoleAppender  
 log4j.appender.Console.Target=System.out  
@@ -35,7 +35,19 @@ log4j.appender.CommonFile.layout.ConversionPattern=[%p] [%d{yyyy-MM-dd HH\:mm\:s
 log4j.appender.CommonFile.Encoding=UTF-8
 
 
+log4j.appender.DB=org.apache.log4j.jdbc.JDBCAppender
 
+log4j.appender.DB.Threshold=ERROR
 
+log4j.appender.DB.URL=jdbc:oracle:thin:@168.33.130.250:1521:mpay
 
+log4j.appender.DB.driver=oracle.jdbc.driver.OracleDriver
+
+log4j.appender.DB.user=mpay
+
+log4j.appender.DB.password=mpay
+
+log4j.appender.DB.sql=INSERT INTO BIZ_EXCEPTION_LOG VALUES('%x','%d','%c','%p','%m')
+
+log4j.appender.DB.layout=org.apache.log4j.PatternLayout
 
