修改日志，删除错误日志单独打印

--- a/mPayTradeCore-service/src/main/resources/log4j.properties
+++ b/mPayTradeCore-service/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 #定义LOG输出级别  
-log4j.rootLogger=DEBUG,Console,ErrorFile,CommonFile,DB
+log4j.rootLogger=INFO,Console,CommonFile,DB
 #定义日志输出目的地为控制台  
 log4j.appender.Console=org.apache.log4j.ConsoleAppender  
 log4j.appender.Console.Target=System.out  
@@ -8,19 +8,6 @@ log4j.appender.Console.layout = org.apache.log4j.PatternLayout
 log4j.appender.Console.layout.ConversionPattern=[%p] [%d{yyyy-MM-dd HH\:mm\:ss SSS}][%c]%m%n
 #定义在Console中日志输出级别DEBUG及以上
 log4j.appender.Console.Threshold=INFO
-
-log4j.appender.ErrorFile=org.apache.log4j.DailyRollingFileAppender
-#指定输出目录  
-log4j.appender.ErrorFile.File=logs/mPayTradeCore-service-error-only.log
-log4j.appender.ErrorFile.DatePattern='.'yyyy-MM-dd'.log'
-#定义文件最大大小  
-#log4j.appender.ErrorFile.MaxFileSize=10MB  
-#定义在ErrorFile中日志输出级别
-log4j.appender.ErrorFile.Threshold=ERROR
-log4j.appender.ErrorFile.layout=org.apache.log4j.PatternLayout  
-log4j.appender.ErrorFile.layout.ConversionPattern=[%p] [%d{yyyy-MM-dd HH\:mm\:ss SSS}][%c]%m%n
-#设置编码
-log4j.appender.ErrorFile.Encoding=UTF-8
  
 log4j.appender.CommonFile=org.apache.log4j.DailyRollingFileAppender
 #每小时生成一个日志文件
@@ -37,7 +24,7 @@ log4j.appender.CommonFile.Encoding=UTF-8
 
 log4j.appender.DB=org.apache.log4j.jdbc.JDBCAppender
 
-log4j.appender.DB.Threshold=ERROR
+log4j.appender.DB.Threshold=WARN
 
 log4j.appender.DB.URL=jdbc:oracle:thin:@168.33.130.250:1521:mpay
 
