--- a/mPayTradeCore-service/src/main/resources/config/jdbc.properties
+++ b/mPayTradeCore-service/src/main/resources/config/jdbc.properties
@@ -1,5 +1,5 @@
 driver=oracle.jdbc.driver.OracleDriver
-url=jdbc:oracle:thin:@168.33.130.250:1521:mpay
+url=jdbc:oracle:thin:@168.33.130.38:1521:szfscp
 username=mpay
 password=mpay
 #定义初始连接数
