修改日志，增加Source字段

--- a/mPayTradeCore-service/src/main/resources/log4j.properties
+++ b/mPayTradeCore-service/src/main/resources/log4j.properties
@@ -33,7 +33,7 @@ log4j.appender.DB.user=mpay
 
 log4j.appender.DB.password=mpay
 
-log4j.appender.DB.sql=INSERT INTO BIZ_EXCEPTION_LOG VALUES('%x','%d','%c','%p','%m')
+log4j.appender.DB.sql=INSERT INTO BIZ_EXCEPTION_LOG VALUES('1','TRADE_CORE','%c','%p','%m','%d')
 
 log4j.appender.DB.layout=org.apache.log4j.PatternLayout
 
