定版前提交

--- a/mPayTradeCore-service/src/main/resources/log4j.properties
+++ b/mPayTradeCore-service/src/main/resources/log4j.properties
@@ -7,7 +7,7 @@ log4j.appender.Console.Target=System.out
 log4j.appender.Console.layout = org.apache.log4j.PatternLayout  
 log4j.appender.Console.layout.ConversionPattern=[%p] [%d{yyyy-MM-dd HH\:mm\:ss SSS}][%c]%m%n
 #定义在Console中日志输出级别DEBUG及以上
-log4j.appender.Console.Threshold=INFO
+log4j.appender.Console.Threshold=ERROR
  
 log4j.appender.CommonFile=org.apache.log4j.DailyRollingFileAppender
 #每小时生成一个日志文件
