--- a/mPayTradeCore-service/src/main/resources/log4j.properties
+++ b/mPayTradeCore-service/src/main/resources/log4j.properties
@@ -20,21 +20,17 @@ log4j.appender.CommonFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.CommonFile.layout.ConversionPattern=[%p] [%d{yyyy-MM-dd HH\:mm\:ss SSS}][%c]%m%n
 #设置编码
 log4j.appender.CommonFile.Encoding=UTF-8
+#设置日志缓存，默认8KB写日志
+log4j.appender.CommonFile.BufferedIO=true
 
+#配置日志写数据库
 log4j.appender.DB=org.apache.log4j.jdbc.JDBCAppender
-
 log4j.appender.DB.Threshold=WARN
-
 log4j.appender.DB.URL=jdbc:oracle:thin:@168.33.130.250:1521:mpay
-
 log4j.appender.DB.driver=oracle.jdbc.driver.OracleDriver
-
 log4j.appender.DB.user=mpay
-
 log4j.appender.DB.password=mpay
-
 log4j.appender.DB.sql=INSERT INTO BIZ_EXCEPTION_LOG VALUES('1','TRADE_CORE','%c','%p','%m','%d')
-
 log4j.appender.DB.layout=org.apache.log4j.PatternLayout
 
 
