修改异常处理

--- a/mPayTradeCore-service/src/main/resources/log4j.properties
+++ b/mPayTradeCore-service/src/main/resources/log4j.properties
@@ -21,7 +21,7 @@ log4j.appender.CommonFile.layout.ConversionPattern=[%p] [%d{yyyy-MM-dd HH\:mm\:s
 #设置编码
 log4j.appender.CommonFile.Encoding=UTF-8
 #设置日志缓存，默认8KB写日志
-log4j.appender.CommonFile.BufferedIO=true
+log4j.appender.CommonFile.BufferedIO=false
 
 #配置日志写数据库
 log4j.appender.DB=org.apache.log4j.jdbc.JDBCAppender
