测试变量读取

--- a/mPayTradeCore-service/src/main/resources/log4j.properties
+++ b/mPayTradeCore-service/src/main/resources/log4j.properties
@@ -6,7 +6,7 @@ log4j.appender.Console.Target=System.out
 #可以灵活地指定日志输出格式，下面一行是指定具体的格式  
 log4j.appender.Console.layout = org.apache.log4j.PatternLayout  
 log4j.appender.Console.layout.ConversionPattern=[%p] [%d{yyyy-MM-dd HH\:mm\:ss SSS}][%c]%m%n
-#定义在Console中日志输出级别DEBUG及以上
+#定义在Console中日志输出级别DEBUG及以上.注意：发布到线上,此处应改为ERROR
 log4j.appender.Console.Threshold=INFO
  
 log4j.appender.CommonFile=org.apache.log4j.DailyRollingFileAppender
