--- a/mPayTradeCore-service/pom.xml
+++ b/mPayTradeCore-service/pom.xml
@@ -161,6 +161,11 @@
 			<artifactId>jstl</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>net.sf.ehcache</groupId>
+			<artifactId>ehcache</artifactId>
+		</dependency>
+
 		<!-- tools end -->
 
 		<!-- alipay trade sdk -->
