--- a/mPayTradeCore-service/src/main/resources/log4j.properties
+++ b/mPayTradeCore-service/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 #定义LOG输出级别  
-log4j.rootLogger=INFO,Console,CommonFile,DB
+log4j.rootLogger=DEBUG,Console,CommonFile,DB
 #定义日志输出目的地为控制台  
 log4j.appender.Console=org.apache.log4j.ConsoleAppender  
 log4j.appender.Console.Target=System.out  
