--- a/pom.xml
+++ b/pom.xml
@@ -203,6 +203,12 @@
 				<version>1.2</version>
 			</dependency>
 
+			<dependency>
+				<groupId>net.sf.ehcache</groupId>
+				<artifactId>ehcache</artifactId>
+				<version>2.10.2</version>
+			</dependency>
+
 			<!-- tools end -->
 
 			<!-- alipay trade sdk -->
