1.删除appid 2.修改日志配置

--- a/mPayTradeCore-service/src/main/resources/log4j.properties
+++ b/mPayTradeCore-service/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 #定义LOG输出级别  
-log4j.rootLogger=DEBUG,Console,CommonFile,DB
+log4j.rootLogger=DEBUG,Console,CommonFile,DB,Logstash
 #定义日志输出目的地为控制台  
 log4j.appender.Console=org.apache.log4j.ConsoleAppender  
 log4j.appender.Console.Target=System.out  
@@ -33,4 +33,12 @@ log4j.appender.DB.password=mpay
 log4j.appender.DB.sql=INSERT INTO BIZ_EXCEPTION_LOG VALUES('1','TRADE_CORE','%c','%p','%m','%d')
 log4j.appender.DB.layout=org.apache.log4j.PatternLayout
 
-
+#配置写Logstash
+log4j.appender.Logstash=org.apache.log4j.net.SocketAppender
+log4j.appender.Logstash.Port=4560
+log4j.appender.Logstash.RemoteHost=168.33.130.251
+log4j.appender.Logstash.ReconnectionDelay=60000
+log4j.appender.Logstash.LocationInfo=true
+log4j.appender.Logstash.layout=org.apache.log4j.PatternLayout  
+log4j.appender.Logstash.layout.ConversionPattern=[%p] [%d{yyyy-MM-dd HH\:mm\:ss SSS}][%c]%m%n
+log4j.appender.Logstash.Threshold=INFO
